--- a/index.html
+++ b/index.html
@@ -34,8 +34,31 @@
             </nav>
         </header>
 
-        <main id="contenu">
-            
+        <main id="contenu" class="container">
+            <div id="slider">
+                <img src="images/swiper-1.jpg" alt="foret">
+                <!-- <img src="images/swiper-2.jpg" alt="jardin a la Française">
+                <img src="images/swiper-3.jpg" alt="jardin"> -->
+            </div>
+
+            <section id="en_avant">
+                <article class="promo">
+                    <a href="#"><img src="images/ampoule.PNG" alt="icone ampoule"></a>
+                    <h3>Idée de paysage</h3>
+                    <hr size="5" noshade>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius magnam officia provident facilis libero repudiandae necessitatibus obcaecati eligendi est ex.</p>
+                </article>
+                <article class="promo">
+                    <a href="#"><img src="images/goutte.PNG" alt="icone goute"></a>
+                        <h3>Irrigation</h3>
+                        <hr size="5" noshade>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius magnam officia provident facilis libero repudiandae necessitatibus obcaecati eligendi est ex.</p></a>
+                </article>
+                <article class="promo"><a><img src="images/photos.PNG" alt="icone photo"></a>
+                    <h3>galerie photos</h3>
+                    <hr size="5" noshade>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius magnam officia provident facilis libero repudiandae necessitatibus obcaecati eligendi est ex.</p></article>
+            </section>
         </main>
 
     
