début media queries medium

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <a href="#">G</a>
             </h2>
             <nav id="menu_principal">
+                <div id="burger">
+                    <i class="fa-solid fa-bars-staggered"></i>
+                </div>
                 <ul id="menu_header">
                     <li>
                         <a class="choix">accueil</a>
@@ -42,12 +45,12 @@
         <main id="contenu" class="container">
             <div class="slider-wrapper theme-default">
             <div id="slider" class="nivoSlider">
-                <img src="images/swiper-1.jpg" alt="foret" title="htmlcaption">
+                <img src="images/swiper-1.jpg" alt="foret" title="#htmlcaption">
                 <img src="images/swiper-2.jpg" alt="jardin a la Française">
                 <img src="images/swiper-3.jpg" alt="jardin">
             </div>
             <div id="htmlcaption" class="nivo-html-caption">
-                <strong>Garden</strong> Pro design d'extérieur<a href="#">a link</a>. 
+                <strong>Garden<br></strong> <span>Pro</span> design d'extérieur. 
             </div>
             
             </div>
@@ -73,7 +76,7 @@
             <div id="bienvenue">
                 <div id="titre-visuel">
                     <h2>Le design <br>paysage</h2>
-                    <img src="images/home-02.jpg" alt="arbre taillé en coeur">
+                    <img src="images/home-02.jpg" alt="arbre taillé en coeur" id="arbre">
                 </div>
                 <div id="intro-texte">
                     <hr size="5" noshade>
